@@ -1,5 +1,13 @@
 2009-02-06  Pedro Alves  <pedro@codesourcery.com>
 
+	* remote.c (extended_remote_can_run): Delete.
+	(init_remote_ops): Don't register it.
+	* target.c (target_get_osdata): Don't check for target_can_run.
+	Instead any target that has already been pushed, otherwise
+	fallback to the default run target..
+
+2009-02-06  Pedro Alves  <pedro@codesourcery.com>
+
 	* target.c (target_create_inferior, target_detach)
 	(target_mourn_inferior, target_attach, target_close): Do target
 	debug output.
